shells/ksh*: Convert coexist options to FLAVORS
6e9237ba47f0 added options to allow the ksh, ksh-devel, and ksh93 ports
to coexist without conflicting with each other. This revision converts
the options to FLAVORS in preparation for infrastructure currently being
discussed to create Mk/Uses/ksh.mk.

--- a/shells/ksh/Makefile
+++ b/shells/ksh/Makefile
@@ -11,6 +11,7 @@
 DISTVERSIONPREFIX=	v
 PORTNAME=	ksh
 PORTVERSION=	1.0.4
+PORTREVISION=	1
 CATEGORIES=	shells
 
 MAINTAINER=	cy@FreeBSD.org
@@ -28,19 +29,8 @@ USE_GITHUB=	yes
 GH_ACCOUNT=	ksh93
 GH_PROJECT=	ksh
 
-# IMPORTANT:	Disabling conflicts, i.e. -DDISABLE_CONFLICTS will result in
-#		arcane build failures due to already installed ksh/ksh93 in
-#		$PATH.
-KSH_CONFLICTS=		pdksh
-KSH93_CONFLICTS=	ksh93 ast-ksh ksh-devel
-
-OPTIONS_DEFAULT=	KSH93 EXAMPLES
+OPTIONS_DEFAULT=	EXAMPLES
 OPTIONS_DEFINE=		EXAMPLES STATIC
-OPTIONS_SINGLE=		BIN_KSH
-OPTIONS_SINGLE_BIN_KSH=	KSH KSH93 KSH93N
-KSH_DESC=		Install to ${PREFIX}/bin/ksh
-KSH93_DESC=		Install to ${PREFIX}/bin/ksh93
-KSH93N_DESC=		Install to ${PREFIX}/bin/ksh93n (new)
 
 CFLAGS+=	-DMAP_TYPE
 LDFLAGS+=	-lm
@@ -48,16 +38,29 @@ MAKE_ENV=	CCFLAGS="-Wno-unused-value -Wno-parentheses -Wno-logical-op-parenthese
 
 STATIC_MAKE_ENV=	LDFLAGS+=-static
 
-KSH_PLIST_SUB=		93=""
-KSH93_PLIST_SUB=	93="93"
-KSH93N_PLIST_SUB=	93="93n"
+FLAVORS=	ksh ksh93 ksh93n
+FLAVOR=		ksh93
 
-.include <bsd.port.options.mk>
 
-.if ${PORT_OPTIONS:MKSH93N}
-PSUFFIX=	93n
-.elif ${PORT_OPTIONS:MKSH93}
+.include <bsd.port.pre.mk>
+
+.if ${FLAVOR} == ksh93
+# Install to ${PREFIX}/bin/ksh93
+# IMPORTANT:	Disabling conflicts, i.e. -DDISABLE_CONFLICTS will result in
+#		arcane build failures due to already installed ksh/ksh93 in
+#		$PATH.
+CONFLICTS=	ksh93 ast-ksh ksh-devel
 PSUFFIX=	93
+PLIST_SUB=	93="93"
+.elif ${FLAVOR} == ksh93n
+# Install to ${PREFIX}/bin/ksh93n (new)
+PSUFFIX=	93n
+PLIST_SUB=	93="93n"
+.else
+# Install to ${PREFIX}/bin/ksh
+CONFLICTS=	pdksh
+PSUFFIX=
+PLIST_SUB=	93=""
 .endif
 
 post-patch:
