devel/binutils: Update to 2.41
ChangeLog:	https://sourceware.org/git/?p=binutils-gdb.git;a=blob;f=binutils/ChangeLog;h=866cf56d16af7994e23414c2d87cf08d119188cb;hb=2c73aeb8d2e02de7b69cbcb13361cfbca9d76a4e

--- a/devel/binutils/Makefile
+++ b/devel/binutils/Makefile
@@ -1,6 +1,5 @@
 PORTNAME=	binutils
-DISTVERSION=	2.40
-PORTREVISION=	4
+DISTVERSION=	2.41
 PORTEPOCH?=	1
 CATEGORIES?=	devel
 MASTER_SITES=	GNU \
@@ -118,6 +117,7 @@ INFO=		as \
 		gprof \
 		bfd \
 		ld \
+		ldint \
 		sframe-spec
 .endif
 
